<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">AbdulWahidNoor-Odev1</string>
    <string name="desc">desc</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="find_your_favorite_food">Find Your \nFavorite Food</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="view_more">View More</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="price_dollar">$%d</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="card">Card</string>
    <string name="chat">Chat</string>
    <string name="go_to_third_fragment">Click Find Your Favorite Food Text for go to third page</string>
    <string name="click_button_for_eat_or_burn">Click button for eat or burn</string>
    <string name="burn">Burn</string>
    <string name="eat">Eat</string>
    <string name="starving">Starving</string>
    <string name="very_hungry">Very hungry</string>
    <string name="pretty_hungry">Pretty hungry</string>
    <string name="starting_feel_hungry">Starting to feel a little hungry</string>
    <string name="satisfied">Satisfied</string>
    <string name="little_full">A little full</string>
    <string name="little_uncomfortable">A little uncomfortable</string>
    <string name="feeling_stuffed">Feeling stuffed</string>
    <string name="very_uncomfortable">Very uncomfortable</string>
    <string name="so_full">So full you feel sick</string>
    <string name="hungry_percent">%% %d</string>
</resources>