<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pattern_sign"
            tools:context=".view.SignInFragment">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login_to_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:textColor="@color/black_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_40"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/bg_et_sign_in"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_to_account" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/bg_et_sign_in"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <TextView
                android:id="@+id/tv_or_continue_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/or_continue_with"
                android:textColor="@color/black_text"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_facebook"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12sp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/vertical_guideline_50"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_or_continue_with">

                <TextView
                    android:id="@+id/tv_ic_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:drawablePadding="16dp"
                    app:drawableStartCompat="@drawable/ic_facebook" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_google"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline_50"
                app:layout_constraintTop_toBottomOf="@+id/tv_or_continue_with">

                <TextView
                    android:id="@+id/tv_ic_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:drawablePadding="16dp"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/cv_google"
                    app:layout_constraintEnd_toEndOf="@+id/cv_google"
                    app:layout_constraintStart_toEndOf="@+id/iv_ic_google"
                    app:layout_constraintTop_toTopOf="@id/cv_google"
                    app:drawableStartCompat="@drawable/ic_google" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_google" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="148dp"
                android:layout_height="56dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/bg_green_gradient"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guideline_40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>