<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LiveDataFragment">

        <TextView
            android:id="@+id/tv_eat_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_button_for_eat_or_burn"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_linear"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_eat_info"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/progress_linear"
            app:layout_constraintTop_toBottomOf="@id/progress_linear"/>

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/progress_linear"
            app:layout_constraintTop_toBottomOf="@id/progress_linear"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_burn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burn"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_eat"
            app:layout_constraintTop_toBottomOf="@id/tv_status"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eat"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toEndOf="@id/btn_burn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>