<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pattern_home"
                tools:context=".view.HomeFragment">

                <TextView
                    android:id="@+id/tv_find_favorite_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/find_your_favorite_food"
                    android:textColor="@color/black_text"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/bg_iv_notification"
                    android:contentDescription="@string/desc"
                    android:padding="5dp"
                    android:src="@drawable/ic_notification"
                    android:translationZ="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_find_favorite_food"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_find_favorite_food"/>

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="4dp"
                    android:autofillHints="no"
                    android:background="@drawable/bg_iv_filter"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/orange_dark"
                    android:hint="@string/what_do_you_want_to_order"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/orange_dark"
                    android:textColorHint="@color/orange_medium"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/vertical_guideline_80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_find_favorite_food" />

                <ImageView
                    android:id="@+id/iv_filter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/bg_iv_filter"
                    android:contentDescription="@string/desc"
                    android:padding="15dp"
                    android:src="@drawable/ic_filter"
                    android:translationZ="2dp"
                    app:circularflow_defaultRadius="15dp"
                    app:circularflow_radiusInDP="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/et_search"
                    app:layout_constraintCircleRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vertical_guideline_80"
                    app:layout_constraintTop_toTopOf="@+id/et_search" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_search" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@id/vp_banner"
                    app:layout_constraintEnd_toEndOf="@id/vp_banner"
                    app:layout_constraintStart_toStartOf="@id/vp_banner"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

                <TextView
                    android:id="@+id/tv_nearest_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/nearest_restaurant"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vp_banner" />

                <TextView
                    android:id="@+id/tv_view_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/view_more"
                    android:textColor="@color/orange_dark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_nearest_restaurant"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="186dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nearest_restaurant"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_restaurant" />

                <TextView
                    android:id="@+id/tv_popular_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/popular_menu"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_restaurant" />

                <TextView
                    android:id="@+id/tv_view_more_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/view_more"
                    android:textColor="@color/orange_dark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_popular_menu"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_menu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/tv_view_more_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_popular_menu" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vertical_guideline_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <me.ibrahimsn.lib.SmoothBottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            app:cornerRadius="15dp"
            app:backgroundColor="@color/white"
            app:textColor="@color/black_text"
            app:indicatorColor="@color/green_menu"
            app:iconTint="@color/green_start"
            app:iconTintActive="@color/green_end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:menu="@menu/menu_bottom" />
    </RelativeLayout>
</layout>